Создаёт структуру файлов проекта , компилирует вcе СSS-файлы в SASS.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <!-- <link rel="stylesheet" href="./css/development.css" /> -->
   </head>
   <body>
@@ -506,7 +506,7 @@
             <ul class="footer-list">
               <li class="social-list">
                 <a class="social-links-footer" href="#" aria-label="Instagram">
-                  <svg class="icon instagram-footer">
+                  <svg class="footer-icon instagram-footer">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
@@ -517,7 +517,7 @@
                   href="#"
                   aria-label="Twitter"
                 >
-                  <svg class="icon twitter-footer">
+                  <svg class="footer-icon twitter-footer">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
@@ -528,7 +528,7 @@
                   href="#"
                   aria-label="Facebook"
                 >
-                  <svg class="icon facebook-footer">
+                  <svg class="footer-icon facebook-footer">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
@@ -539,7 +539,7 @@
                   href="#"
                   aria-label="Linkedin"
                 >
-                  <svg class="icon linkedin-footer">
+                  <svg class="footer-icon linkedin-footer">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
