--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <!-- <link rel="stylesheet" href="./css/development.css" /> -->
   </head>
   <body>
@@ -342,7 +342,7 @@
             <ul class="footer-list">
               <li class="social-list">
                 <a class="social-links-footer" href="#" aria-label="Instagram">
-                  <svg class="icon instagram-footer">
+                  <svg class="footer-icon instagram-footer">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
@@ -353,7 +353,7 @@
                   href="#"
                   aria-label="Twitter"
                 >
-                  <svg class="icon twitter-footer">
+                  <svg class="footer-icon twitter-footer">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
@@ -364,7 +364,7 @@
                   href="#"
                   aria-label="Facebook"
                 >
-                  <svg class="icon facebook-footer">
+                  <svg class="footer-icon facebook-footer">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
@@ -375,7 +375,7 @@
                   href="#"
                   aria-label="Linkedin"
                 >
-                  <svg class="icon linkedin-footer">
+                  <svg class="footer-icon linkedin-footer">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
